@@ -3,32 +3,31 @@ package com.example.demo.security;
 import com.example.demo.entity.CustomerProfile;
 import com.example.demo.repository.CustomerProfileRepository;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.*;
+import org.springframework.security.core.userdetails.User;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
+import java.util.Collections;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
-
-    private final CustomerProfileRepository repository;
-
-    public CustomUserDetailsService(CustomerProfileRepository repository) {
-        this.repository = repository;
+    
+    private final CustomerProfileRepository customerProfileRepository;
+    
+    public CustomUserDetailsService(CustomerProfileRepository customerProfileRepository) {
+        this.customerProfileRepository = customerProfileRepository;
     }
-
+    
     @Override
-    public UserDetails loadUserByUsername(String email)
-            throws UsernameNotFoundException {
-
-        CustomerProfile customer = repository.findByEmail(email)
-                .orElseThrow(() ->
-                        new UsernameNotFoundException("User not found"));
-
+    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+        CustomerProfile customer = customerProfileRepository.findByEmail(email)
+                .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
+        
         return new User(
                 customer.getEmail(),
-                "encrypted-password",
-                List.of(new SimpleGrantedAuthority("ROLE_USER"))
+                customer.getPassword(),
+                Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + customer.getRole()))
         );
     }
 }
